vs-common/main/default/objects/Contact/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description
  >This field is configured in NPSP Settings &gt; Relationships &gt; Relationships as the Gender field. Do not delete this field unless you remove the reference or select another Gender field there.</description>
    <label>Gênero</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Masculino</fullName>
            </value>
            <value>
                <fullName>Feminino</fullName>
            </value>
            <value>
                <fullName>Prefere não informar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>