vs-common/main/default/objects/Contact/fields/vs_ckb_implantado__c.field-meta.xml
<CustomField>
    <fullName>vs_ckb_implantado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Implantado</label>
    <type>Checkbox</type>
</CustomField>