vs-common/main/default/objects/Contact/fields/vs_ckb_oralizado__c.field-meta.xml
<CustomField>
    <fullName>vs_ckb_oralizado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oralizado</label>
    <type>Checkbox</type>
</CustomField>