vs-common/main/default/objects/Contact/fields/vs_pkl_cor_pele__c.field-meta.xml
<CustomField>
    <fullName>vs_pkl_cor_pele__c</fullName>
    <label>Cor da Pele</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amarela</fullName>
            </value>
            <value>
                <fullName>Branca</fullName>
            </value>
            <value>
                <fullName>Indígena</fullName>
            </value>
            <value>
                <fullName>Parda</fullName>
            </value>
            <value>
                <fullName>Preta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>