vs-common/main/default/objects/Contact/fields/vs_pkl_identidade_genero__c.field-meta.xml
<CustomField>
    <fullName>vs_pkl_identidade_genero__c</fullName>
    <label>Identidade de gênero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cisgenero</fullName>
            </value>
            <value>
                <fullName>Homossexual</fullName>
            </value>
            <value>
                <fullName>Bissexual</fullName>
            </value>
            <value>
                <fullName>Não Binário</fullName>
            </value>
            <value>
                <fullName>Pansexual</fullName>
            </value>
            <value>
                <fullName>Não deseja informar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>