vs-common/main/default/objects/Contact/fields/vs_pkl_nucleo__c.field-meta.xml
<CustomField>
    <fullName>vs_pkl_nucleo__c</fullName>
    <label>Núcleo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recursos Humanos</fullName>
            </value>
            <value>
                <fullName>Idosos</fullName>
            </value>
            <value>
                <fullName>Marketing e Comunicação</fullName>
            </value>
            <value>
                <fullName>Arte, Cultura e Diversidade</fullName>
            </value>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Conselho Fiscal</fullName>
            </value>
            <value>
                <fullName>Conselho de Ética</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>