vs-common/main/default/objects/Contact/fields/vs_pkl_sinalizado__c.field-meta.xml
<CustomField>
    <fullName>vs_pkl_sinalizado__c</fullName>
    <label>Sinalizado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Básico</fullName>
            </value>
            <value>
                <fullName>Intermediário</fullName>
            </value>
            <value>
                <fullName>Avançado / Fluente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>