vs-common/main/default/objects/Contact/fields/vs_pkl_tipo__c.field-meta.xml
<CustomField>
    <fullName>vs_pkl_tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sócio</fullName>
            </value>
            <value>
                <fullName>Voluntário</fullName>
            </value>
            <value>
                <fullName>Associado</fullName>
            </value>
            <value>
                <fullName>Parceiro</fullName>
            </value>
            <value>
                <fullName>Sócio Empresarial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>