vs-common/main/default/objects/Contact/fields/vs_pkl_tipo_deficiencia__c.field-meta.xml
<CustomField>
    <fullName>vs_pkl_tipo_deficiencia__c</fullName>
    <label>Tipo de deficiência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pessoa na cadeira de roda</fullName>
            </value>
            <value>
                <fullName>Dislexia</fullName>
            </value>
            <value>
                <fullName>Daltônico</fullName>
            </value>
            <value>
                <fullName>Baixa visão</fullName>
            </value>
            <value>
                <fullName>Cego</fullName>
            </value>
            <value>
                <fullName>Surdo</fullName>
            </value>
            <value>
                <fullName>Surdo / Cego</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>