vs-common/main/default/objects/Contact/fields/vs_txt_documento__c.field-meta.xml
<CustomField>
    <fullName>vs_txt_documento__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText
  >No formato XXX.XXX.XXX-XX ou YY.YYY.YYY/YYYY-YY</inlineHelpText>
    <label>Documento (CPF/CNPJ)</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>