vs-common/main/default/objects/Contact/validationRules/Contact_Preferred_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Preferred_Phone</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 ISPICKVAL(npe01__PreferredPhone__c ,&quot;&quot;),
OR(
 LEN(MobilePhone)&gt;0,
 LEN( npe01__WorkPhone__c)&gt;0,
 LEN( OtherPhone )&gt;0
)
)</errorConditionFormula>
    <errorDisplayField>npe01__PreferredPhone__c</errorDisplayField>
    <errorMessage>Please select a Preferred Phone</errorMessage>
</ValidationRule>