vs-common/main/default/objects/Contact/validationRules/vs_formato_documento.validationRule-meta.xml
<ValidationRule>
    <fullName>vs_formato_documento</fullName>
    <active>true</active>
    <errorConditionFormula
  >!REGEX(vs_txt_documento__c, &quot;^(\\d{3}\\.\\d{3}\\.\\d{3}\\-\\d{2})?$&quot;)
 &amp;&amp; !REGEX(vs_txt_documento__c,&quot;^(\\d{2}\\.\\d{3}\\.\\d{3}/\\d{4}\\-\\d{2})?$&quot;)</errorConditionFormula>
    <errorDisplayField>vs_txt_documento__c</errorDisplayField>
    <errorMessage
  >O formato do documento deve ser XXX.XXX.XXX-XX ou YY.YYY.YYY/YYYY-YY</errorMessage>
</ValidationRule>