vs-common/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>vs_pkl_tipo__c</columns>
    <columns>vs_pkl_nucleo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>