vs-common/main/default/objects/Contact/listViews/BirthdaysThisMonth.listView-meta.xml
<ListView>
    <fullName>BirthdaysThisMonth</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>vs_pkl_tipo__c</columns>
    <columns>vs_pkl_nucleo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.BIRTHDATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Birthdays This Month</label>
</ListView>