vs-common/main/default/objects/Contact/listViews/NewLastWeek.listView-meta.xml
<ListView>
    <fullName>NewLastWeek</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>vs_pkl_tipo__c</columns>
    <columns>vs_pkl_nucleo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_WEEK</value>
    </filters>
    <label>Novos na Semana Passada</label>
</ListView>